# openapi.yaml
@@ -72,26 +72,26 @@ paths:
 #                items:
 #                  $ref: '#/components/schemas/UserResponse'
 #
-#  /users/{id}:
-#    get:
-#      summary: Get user by ID
-#      operationId: getUser
-#      parameters:
-#        - name: id
-#          in: path
-#          required: true
-#          description: ID of the user
-#          schema:
-#            type: string
-#      responses:
-#        '200':
-#          description: User details
-#          content:
-#            application/json:
-#              schema:
-#                $ref: '#/components/schemas/UserResponse'
-#        '404':
-#          description: User not found
+  /users/{id}:
+    get:
+      summary: Get user by ID
+      operationId: getUser
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user
+          schema:
+            type: string
+      responses:
+        '200':
+          description: User details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+        '404':
+          description: User not found
 #    put:
 #      summary: Update user by ID
 #      operationId: updateUser
